<resources>
    <string name="app_name">Library Tour</string>
    <string name="find_materials">Find Materials</string>
    <string name="borrow_request">Borrow/Request</string>
    <string name="reserve_space">Reserve Space</string>
    <string name="research_guides">Research Guides</string>
    <string name="research_assistance">Research Assistance</string>
    <string name="events">Events</string>
    <string name="download_app">Download App</string>
    <string name="close">Close</string>
    <string name="qr_code">QR Code</string>
    <string name="uab_logo">UAB Logo</string>
    <string name="about_link">https://library.uab.edu/</string>
    <string name="support_link">https://www.robotemi.com/</string>
    <string name="special_collections">Special Collections</string>
    <string name="search_collection">Search the Collection</string>
    <string name="databases">Databases</string>
    <string name="e_journals">E-Journals</string>
    <string name="digital_collections">Digital Collections</string>
    <string name="clinical_resources">Clinical Resources</string>
    <string name="request_materials">Request Materials</string>
    <string name="arrow_png">White Arrow</string>
</resources>